# dream-ai-engineering-copilot

./: .env.example  .env.qwencloud.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PROVENANCE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  dream.yaml  pyproject.toml
.reuse/: dep5
docs/: _config.yml  architecture.md  artifact-isolation.md  audit-eval.md  chatgpt-dream-memory-review-summary.zh-CN.md  chatgpt-dream-memory-strategy-brief.md  codebase-memory.md  company-import-workflow.md  configuration.md  connector-lifecycle-foundation.md  context-intelligence-layer.md  controlled-enterprise-pilot-proposal.md  current-development-handoff.md  demo-dataset.md  demo-hld.md  dlp-enforcement-foundation.md  dream-frontier-methodology.md  dream-memory-system-tech-zh-CN.html  dream-memory-system-tech-zh-CN.md  dream-omni-agentic-analytics-reference.zh-CN.html  dream-omni-agentic-analytics-reference.zh-CN.md  evaluation-agent.md  (+55 more)
examples/private-extension-template/: .gitignore  README.md  pyproject.toml
examples/private-extension-template/config/: dream.private.example.yaml  provider-approval.example.json
examples/private-extension-template/knowledge_packs/team_template/: team.yaml
examples/private-extension-template/knowledge_packs/team_template/docs/architecture/: sample-architecture.md
examples/private-extension-template/knowledge_packs/team_template/docs/pr-review/: sample-review-checklist.md
examples/private-extension-template/knowledge_packs/team_template/docs/runbooks/: sample-runbook.md
examples/private-extension-template/knowledge_packs/team_template/docs/testing/: sample-test-guidelines.md
examples/private-extension-template/private_plugins/: custom_llm_provider.py  custom_prompt_policy.py  custom_redaction_provider.py
(+627 files in other folders)
