# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dream-ai-engineering-copilot"
version = "0.2.0.dev0"
description = "Open-source source-backed memory platform for team knowledge, codebase context, workflow automation, audit, and evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DREAM Contributors" }]
keywords = [
  "ai",
  "memory",
  "knowledge-base",
  "engineering",
  "requirements",
  "pr-review",
  "audit",
  "evaluation",
  "test-generation",
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.1",
  "tablestore>=6.4.8,<7.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "python-dotenv>=1.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
dream = "dream.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dream*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
